routing.tf

resource "aws_default_route_table" "edge-route-table" {
  default_route_table_id = aws_vpc.edge-vpc.default_route_table_id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.edge-gw.id
  }
  route {
    cidr_block  = aws_vpc.app-vpc.cidr_block
    vpc_peering_connection_id = aws_vpc_peering_connection.edge-app.id
  }
  route {
    cidr_block = aws_subnet.app-private-subnet-us-east-1a.cidr_block
    vpc_peering_connection_id = aws_vpc_peering_connection.edge-app.id
  }
  route {
    cidr_block = aws_subnet.app-private-subnet-us-east-1b.cidr_block
    vpc_peering_connection_id = aws_vpc_peering_connection.edge-app.id
  }
  route {
    cidr_block = aws_subnet.app-private-subnet-us-east-1c.cidr_block
    vpc_peering_connection_id = aws_vpc_peering_connection.edge-app.id
  }
  tags = {
    Owner       = "Avillach_Lab"
    Environment = "development"
    Name        = "FISMA Terraform Playground - Edge VPC Route Table"
  }
}

resource "aws_route_table_association" "edge-route-table-us-east-1a-association" {
  subnet_id = aws_subnet.edge-public-subnet-us-east-1a.id
  route_table_id = aws_vpc.edge-vpc.default_route_table_id
}
resource "aws_route_table_association" "edge-route-table-us-east-1b-association" {
  subnet_id = aws_subnet.edge-public-subnet-us-east-1b.id
  route_table_id = aws_vpc.edge-vpc.default_route_table_id
}
resource "aws_route_table_association" "edge-route-table-us-east-1c-association" {
  subnet_id = aws_subnet.edge-public-subnet-us-east-1c.id
  route_table_id = aws_vpc.edge-vpc.default_route_table_id
}

resource "aws_default_route_table" "app-route-table" {
  default_route_table_id = aws_vpc.app-vpc.default_route_table_id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.app-gw-for-dev-only.id
  }
  route {
    cidr_block  = aws_vpc.data-vpc.cidr_block
    vpc_peering_connection_id = aws_vpc_peering_connection.app-data.id
  }  
  route {
    cidr_block    = aws_subnet.data-hpds-subnet-us-east-1a.cidr_block
    vpc_peering_connection_id = aws_vpc_peering_connection.app-data.id
  }
  route {
    cidr_block    = aws_subnet.data-hpds-subnet-us-east-1b.cidr_block
    vpc_peering_connection_id = aws_vpc_peering_connection.app-data.id
  }
  route {
    cidr_block    = aws_subnet.data-hpds-subnet-us-east-1c.cidr_block
    vpc_peering_connection_id = aws_vpc_peering_connection.app-data.id
  }
  route {
    cidr_block    = aws_subnet.data-db-subnet-us-east-1a.cidr_block
    vpc_peering_connection_id = aws_vpc_peering_connection.app-data.id
  }
  route {
    cidr_block    = aws_subnet.data-db-subnet-us-east-1b.cidr_block
    vpc_peering_connection_id = aws_vpc_peering_connection.app-data.id
  }
  route {
    cidr_block    = aws_subnet.data-db-subnet-us-east-1c.cidr_block
    vpc_peering_connection_id = aws_vpc_peering_connection.app-data.id
  }
  tags = {
    Owner       = "Avillach_Lab"
    Environment = "development"
    Name        = "FISMA Terraform Playground - App VPC Route Table"
  }
}

resource "aws_route_table_association" "app-route-table-us-east-1a-association" {
  subnet_id = aws_subnet.app-private-subnet-us-east-1a.id
  route_table_id = aws_vpc.app-vpc.default_route_table_id
}
resource "aws_route_table_association" "app-route-table-us-east-1b-association" {
  subnet_id = aws_subnet.app-private-subnet-us-east-1b.id
  route_table_id = aws_vpc.app-vpc.default_route_table_id
}
resource "aws_route_table_association" "app-route-table-us-east-1c-association" {
  subnet_id = aws_subnet.app-private-subnet-us-east-1c.id
  route_table_id = aws_vpc.app-vpc.default_route_table_id
}


resource "aws_default_route_table" "data-route-table" {
  default_route_table_id = aws_vpc.data-vpc.default_route_table_id
  route {
    cidr_block    = aws_vpc.app-vpc.cidr_block
    vpc_peering_connection_id = aws_vpc_peering_connection.app-data.id
  }
  tags = {
    Owner       = "Avillach_Lab"
    Environment = "development"
    Name        = "FISMA Terraform Playground - Data VPC Route Table"
  }
}


resource "aws_route_table_association" "data-db-route-table-us-east-1a-association" {
  subnet_id = aws_subnet.data-db-subnet-us-east-1a.id
  route_table_id = aws_vpc.data-vpc.default_route_table_id
}
resource "aws_route_table_association" "data-db-route-table-us-east-1b-association" {
  subnet_id = aws_subnet.data-db-subnet-us-east-1b.id
  route_table_id = aws_vpc.data-vpc.default_route_table_id
}
resource "aws_route_table_association" "data-db-route-table-us-east-1c-association" {
  subnet_id = aws_subnet.data-db-subnet-us-east-1c.id
  route_table_id = aws_vpc.data-vpc.default_route_table_id
}

resource "aws_route_table_association" "data-hpds-route-table-us-east-1a-association" {
  subnet_id = aws_subnet.data-hpds-subnet-us-east-1a.id
  route_table_id = aws_vpc.data-vpc.default_route_table_id
}
resource "aws_route_table_association" "data-hpds-route-table-us-east-1b-association" {
  subnet_id = aws_subnet.data-hpds-subnet-us-east-1b.id
  route_table_id = aws_vpc.data-vpc.default_route_table_id
}
resource "aws_route_table_association" "data-hpds-route-table-us-east-1c-association" {
  subnet_id = aws_subnet.data-hpds-subnet-us-east-1c.id
  route_table_id = aws_vpc.data-vpc.default_route_table_id
}
